--- a/members.html
+++ b/members.html
@@ -28,17 +28,18 @@
 
     <div id="menu">
         <div class="pure-menu pure-menu-open">
-            <a class="pure-menu-heading" href="index.html">The Quays</a>
+            <a class="pure-menu-heading" href="#">The Quays</a>
 
             <ul>
-                <li class="menu-item-divided pure-menu-selected"><a href="#">Home</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="/index.html">Home</a>
+				</li>
+                <li><a href="/about.html">About</a></li>
 
-                <li>
-                    <a href="members.html">Members</a>
+                <li class="menu-item-divided pure-menu-selected">
+                    <a href="/members.html">Members</a>
                 </li>
 
-                <li><a href="media.html">Media</a></li>
+                <li><a href="/media.html">Media</a></li>
 				<li><a href ="/contact.html">Contact</a></li>
             </ul>
         </div>
