--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 
     <div id="menu">
         <div class="pure-menu pure-menu-open">
-            <a class="pure-menu-heading" href="#">The Quays</a>
+            <a class="pure-menu-heading" href="index.html">The Quays</a>
 
             <ul>
                 <li >
@@ -53,14 +53,14 @@
 
     <div id="main">
         <div class="header">
-            <h1>Page Title</h1>
-            <h2>A subtitle for your page goes here</h2>
+            <h1>About The Quays</h1>
         </div>
 
         <div class="content">
-            <h2 class="content-subhead">How to use this layout</h2>
+            <h2 class="content-subhead">A little about the band</h2>
             <p>
-                To use this layout, you can just copy paste the HTML, along with the CSS in <a href="/css/layouts/side-menu.css" alt="Side Menu CSS">side-menu.css</a>, and the JavaScript in <a href="/js/ui.js">ui.js</a>. The JS file uses vanilla JavaScript to simply toggle an <code>active</code> class that makes the menu responsive.
+                The Quays are an up and coming band from NCI and have been making waves already in their short time together.
+				The Band consists of Eve, Hugh, Ryan, Jason, Laolu and Eoghan! 
             </p>
 
             <h2 class="content-subhead">Now Let's Speak Some Latin</h2>
