--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a class="pure-menu-heading" href="index.html">The Quays</a>
 
             <ul>
-                <li class="menu-item-divided pure-menu-selected"><a href="#">Home</a></li>
+                <li class="menu-item-divided pure-menu-selected"><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
 
                 <li>
