--- a/contact.html
+++ b/contact.html
@@ -28,18 +28,18 @@
 
     <div id="menu">
         <div class="pure-menu pure-menu-open">
-            <a class="pure-menu-heading" href="#">The Quays</a>
+            <a class="pure-menu-heading" href="/index.html">The Quays</a>
 
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/about.html">About</a></li>
 
                 <li>
-                    <a href="members.html">Members</a>
+                    <a href="/members.html">Members</a>
                 </li>
 
-                <li><a href="media.html">Media</a></li>
-				<li class="menu-item-divided pure-menu-selected"><a href ="contact.html">Contact</a></li>
+                <li><a href="/media.html">Media</a></li>
+				<li class="menu-item-divided pure-menu-selected"><a href ="/contact.html">Contact</a></li>
             </ul>
         </div>
     </div>
