--- a/members.html
+++ b/members.html
@@ -28,7 +28,7 @@
 
     <div id="menu">
         <div class="pure-menu pure-menu-open">
-            <a class="pure-menu-heading" href="#">The Quays</a>
+            <a class="pure-menu-heading" href="index.html">The Quays</a>
 
             <ul>
                 <li><a href="/index.html">Home</a>
