--- a/media.html
+++ b/media.html
@@ -39,7 +39,7 @@
                 </li>
 
                 <li class="menu-item-divided pure-menu-selected"><a href="/media.html">Media</a></li>
-				<li><a href ="/contacts.html">Contact</a></li>
+				<li><a href ="/contact.html">Contact</a></li>
             </ul>
         </div>
     </div>
