--- a/members.html
+++ b/members.html
@@ -64,16 +64,16 @@
 
             <div class="pure-g">
                 <div class="pure-u-1-4">
-                    <img class="pure-img-responsive" src="group.jpg" alt="Group">
+                    <img class="pure-img-responsive" src="pics/group.jpg" alt="Group">
                 </div>
                 <div class="pure-u-1-4">
-                    <img class="pure-img-responsive" src="collage.jpg" alt="Collage">
+                    <img class="pure-img-responsive" src="pics/collage.jpg" alt="Collage">
                 </div>
                 <div class="pure-u-1-4">
-                    <img class="pure-img-responsive" src="quays.jpg" alt="The Quays">
+                    <img class="pure-img-responsive" src="pics/quays.jpg" alt="The Quays">
                 </div>
                 <div class="pure-u-1-4">
-                    <img class="pure-img-responsive" src="wall.jpg" alt="wall">
+                    <img class="pure-img-responsive" src="pics/wall.jpg" alt="wall">
                 </div>
             </div>
 
