--- a/media.html
+++ b/media.html
@@ -46,33 +46,29 @@
 
     <div id="main">
         <div class="header">
-            <h1>Page Title</h1>
-            <h2>A subtitle for your page goes here</h2>
+            <h1>Band Media</h1>
+            <h2>Here's a selection of tracks that the band has covered.</h2>
         </div>
 
         <div class="content">
-            <h2 class="content-subhead">How to use this layout</h2>
-            <p>
-                To use this layout, you can just copy paste the HTML, along with the CSS in <a href="/css/layouts/side-menu.css" alt="Side Menu CSS">side-menu.css</a>, and the JavaScript in <a href="/js/ui.js">ui.js</a>. The JS file uses vanilla JavaScript to simply toggle an <code>active</code> class that makes the menu responsive.
-            </p>
+            <h2 class="content-subhead">Videos</h2>
+            <iframe width="600" height="400" src="http://www.youtube.com/embed/HSJ9XmqMdo8" frameborder="0" allowfullscreen></iframe>
 
-            <h2 class="content-subhead">Now Let's Speak Some Latin</h2>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            </p>
-
+            <h2 class="content-subhead">Songs</h2>
+            <iframe width="70%" height="450" scrolling="no" frameborder="yes" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/118561043&amp;auto_play=false&amp;hide_related=false&amp;visual=true"></iframe>
+			<hr />
             <div class="pure-g">
                 <div class="pure-u-1-4">
-                    <img class="pure-img-responsive" src="group.jpg" alt="Group">
+                    <img class="pure-img-responsive" src="pics/group.jpg" alt="Group">
                 </div>
                 <div class="pure-u-1-4">
-                    <img class="pure-img-responsive" src="collage.jpg" alt="Collage">
+                    <img class="pure-img-responsive" src="pics/collage.jpg" alt="Collage">
                 </div>
                 <div class="pure-u-1-4">
-                    <img class="pure-img-responsive" src="quays.jpg" alt="The Quays">
+                    <img class="pure-img-responsive" src="pics/quays.jpg" alt="The Quays">
                 </div>
                 <div class="pure-u-1-4">
-                    <img class="pure-img-responsive" src="wall.jpg" alt="wall">
+                    <img class="pure-img-responsive" src="pics/wall.jpg" alt="wall">
                 </div>
             </div>
 
