--- a/members.html
+++ b/members.html
@@ -52,6 +52,8 @@
         </div>
 
         <div class="content">
+		
+		<a href="pic/group.jpg" class="flipLightBox"><img src="pics/group.jpg"></a>
             
 
             <div class="pure-g">
@@ -74,6 +76,9 @@
     </div>
 </div>
 <script src="js/ui.js"></script>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script type="text/javascript" src="fliplightbox/fliplightbox.min.js"></script>
+<script type="text/javascript">$('body').flipLightBox()</script>
 
 
 </body>
