--- a/media.html
+++ b/media.html
@@ -50,9 +50,12 @@
             <h2>Here's a selection of tracks that the band has covered.</h2>
         </div>
 
+		
         <div class="content">
-            <h2 class="content-subhead">Videos</h2>
-            <iframe width="600" height="400" src="http://www.youtube.com/embed/HSJ9XmqMdo8" frameborder="0" allowfullscreen></iframe>
+            <h2 class="video-container">Videos</h2>
+			<div class="video-container">
+				<iframe width="600" height="400" src="http://www.youtube.com/embed/HSJ9XmqMdo8" frameborder="0" allowfullscreen></iframe>
+			</div> 
 
             <h2 class="content-subhead">Songs</h2>
 			<iframe width="70%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/117003080&amp;auto_play=false&amp;hide_related=false&amp;visual=true"></iframe>
