--- a/media.html
+++ b/media.html
@@ -6,8 +6,8 @@
 <meta name="description" content="A website to showcase The Quays, A band from NCI.">
 
     <title>The Quays Band Page</title>
-<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css">
-
+	<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css">
+	<link rel="stylesheet" href="css/style.css" type="text/css">
   
     <!--[if lte IE 8]>
         <link rel="stylesheet" href="css/layouts/side-menu-old-ie.css">
