--- a/members.html
+++ b/members.html
@@ -17,6 +17,11 @@
     <!--[if gt IE 8]><!-->
         <link rel="stylesheet" href="css/layouts/side-menu.css">
     <!--<![endif]-->    
+	
+	<!-- fliplightbox-->
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js"></script>
+<script src="flipLightbox.min.js"></script>
+
 
 </head>
 <body>
@@ -52,10 +57,11 @@
             <h1>Band Members</h1>
             <h2>A more in depth look into the band.</h2>
         </div>
-
+		
         <div class="content">
 		
 		<a href="pic/group.jpg" class="flipLightBox"><img src="pics/group.jpg"></a>
+		<a href="lightbox-image.jpg" class="flipLightBox"><img src="pics/group.jpg"><span>Optional Lightbox Text</span></a>
             
 
             <div class="pure-g">
@@ -78,7 +84,7 @@
     </div>
 </div>
 <script src="js/ui.js"></script>
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script type="text/javascript" src="fliplightbox/fliplightbox.min.js"></script>
 <script type="text/javascript">$('body').flipLightBox()</script>
 
