--- a/eve.html
+++ b/eve.html
@@ -46,7 +46,7 @@
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li><a href="/index.html">Home</a></li>
-                <lia href="/about.html">About</a></li>				
+                <li><a href="/about.html">About</a></li>				
 				 <li class="dropdown">
                   <a href="" class="dropdown-toggle" data-toggle="dropdown">Media <b class="caret"></b></a>
                   <ul class="dropdown-menu">
@@ -126,7 +126,7 @@
       <div class="row">
         <div class="col-lg-4">
          <h2>About</h2>
-          <p>The Quays are a band set up in NCI....</p>
+          <p>Eve is the lead female vocalist for the band. She is currently studying computing in NCI</p>
 		  
 		  <p><a class="btn btn-default" href="/about.html" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
