--- a/eve.html
+++ b/eve.html
@@ -127,19 +127,14 @@
         <div class="col-lg-4">
          <h2>About</h2>
           <p>Eve is the lead female vocalist for the band. She is currently studying computing in NCI</p>
-		  
-		  <p><a class="btn btn-default" href="/about.html" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          
-          <h2>Charity</h2>
-          <p>The band has been involved in charity work. Why not donate and help both the band and the charity out.</p>
-          <p><a class="btn btn-default" href="http://thequays.bandcamp.com/" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
+          <h2>NCI SU</h2>
+          <p>Eve has recently been elected into the NCI Student Union as Communications Officer.</p>
+          </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <h2>Side projects</h2>
-          <p>Lead guitarist and male lead singer has set up a side project,</p>
-          <p><a class="btn btn-default" href="https://soundcloud.com/hughh95" role="button">Check it out &raquo;</a></p>
+          <h2>Fresher of the Year</h2>
+          <p>Eve won the inaugural "Fresher of the Year" award within NCI.</p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
 
