--- a/hugh.html
+++ b/hugh.html
@@ -132,9 +132,8 @@
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           
-          <h2>Charity</h2>
-          <p>The band has been involved in charity work. Why not donate and help both the band and the charity out.</p>
-          <p><a class="btn btn-default" href="http://thequays.bandcamp.com/" role="button">View details &raquo;</a></p>
+          <h2>Work</h2>
+          <p>Outside the band, Hugh sings for entertainment in a restaurant.</p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <h2>Side projects</h2>
