--- a/media.html
+++ b/media.html
@@ -41,11 +41,11 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">The Quays NCI</a>
+              <a class="navbar-brand" href="http://thequays.gopagoda.com/">The Quays NCI</a>
             </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="/index.html">Home</a></li>
+                <li><a href="/index.html">Home</a></li>
                 <li><a href="/about.html">About</a></li>
 				
 				
@@ -54,7 +54,7 @@
 				 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Media <b class="caret"></b></a>
                   <ul class="dropdown-menu">
-					<li><a href="/media.html">Media</a></li>				  
+					<li class="active"><a href="/media.html">Media</a></li>				  
                     <li><a href="https://www.youtube.com/channel/UCMDJfqfPGu2EnjiMLsWr4lQ">YouTube</a></li>
                     <li><a href="https://soundcloud.com/thequaysnci">Sound Cloud</a></li>
                   </ul>
@@ -64,8 +64,8 @@
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Members <b class="caret"></b></a>
                   <ul class="dropdown-menu">
-                    <li><a href="#">Eve O'Connor</a></li>
-                    <li><a href="#">Hugh Hayes</a></li>
+                    <li><a href="/eve.html">Eve O'Connor</a></li>
+                    <li><a href="/hugh.html">Hugh Hayes</a></li>
                     <li><a href="#">Something else here</a></li>
                   </ul>
                 </li>
