--- a/media.html
+++ b/media.html
@@ -66,7 +66,7 @@
                   <ul class="dropdown-menu">
                     <li><a href="/eve.html">Eve O'Connor</a></li>
                     <li><a href="/hugh.html">Hugh Hayes</a></li>
-                    <li><a href="#">Something else here</a></li>
+                    
                   </ul>
                 </li>
               </ul>
@@ -93,55 +93,39 @@
 
 
       <!-- START THE FEATURETTES -->
-	  
-	  <h2>Videos</h2>
-			<div class="video-container">
-				<iframe width="600" height="400" src="http://www.youtube.com/embed/HSJ9XmqMdo8" frameborder="0" allowfullscreen></iframe>
-			</div> 
+	
+      <hr class="featurette-divider">
 
-            <h2>Songs</h2>
-			<div class="video-container">
+      <div class="row featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading">Videos</h2>
+          <div class="video-container">
+				<iframe width="100%" height="450" src="http://www.youtube.com/embed/HSJ9XmqMdo8" frameborder="0" allowfullscreen></iframe>
+			</div> 
+			</div>
+        <div class="col-md-5">
+  
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-5">
+         
+        </div>
+        <div class="col-md-7">
+          <h2 class="featurette-heading">Songs</h2>
+		  <div class="video-container">
 			<iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/117003080&amp;auto_play=false&amp;hide_related=false&amp;visual=true"></iframe>
 			</div>
-			<hr />
-
-      <hr class="featurette-divider">
-
-      <div class="row featurette">
-        <div class="col-md-7">
-          <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-        </div>
-        <div class="col-md-5">
-          <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
-        </div>
+          </div>
       </div>
 
       <hr class="featurette-divider">
 
-      <div class="row featurette">
-        <div class="col-md-5">
-          <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
-        </div>
-        <div class="col-md-7">
-          <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-        </div>
-      </div>
 
-      <hr class="featurette-divider">
-
-      <div class="row featurette">
-        <div class="col-md-7">
-          <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-        </div>
-        <div class="col-md-5">
-          <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
-        </div>
-      </div>
-
-      <hr class="featurette-divider">
+   
 
       <!-- /END THE FEATURETTES -->
 
