--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="http://thequays.gopagoda.com/">The Quays NCI</a>
+              <a class="navbar-brand" href="http://thequays.azurewebsites.net/">The Quays NCI</a>
             </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
@@ -141,7 +141,7 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">Follow us on Twitter <h2>
+          <h2 class="featurette-heading">Follow us on Twitter </h2>
           <p class="lead">We're also on Twitter.</p>
 		   <p><a class="btn btn-default" href="https://twitter.com/TheQuaysNCI" role="button">View details &raquo;</a></p>
         </div>
