--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="http://thequays.gopagoda.com/">The Quays NCI</a>
+              <a class="navbar-brand" href="http://thequays.azurewebsites.net/">The Quays NCI</a>
             </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
@@ -110,7 +110,7 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>Check out their music.</h1>
-              <p><a class="btn btn-lg btn-primary" href="/media" role="button">Click here</a></p>
+              <p><a class="btn btn-lg btn-primary" href="/media.html" role="button">Click here</a></p>
             </div>
           </div>
         </div>
