--- a/media.html
+++ b/media.html
@@ -41,7 +41,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="http://thequays.gopagoda.com/">The Quays NCI</a>
+              <a class="navbar-brand" href="http://thequays.azurewebsites.net/">The Quays NCI</a>
             </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
